[tool.poetry]
name = "redisreentrantlock"
version = "0.1.0"
description = ""
authors = ["Chad Dotson <1754094+chaddotson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
